--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                             </div>
                             <div class="title-contacts">
                                 <h1>Обсудим</h1>
-                                <h1>Вашу идею</h1>
+                                <h1>Вашу идею ?</h1>
                             </div>
                             
 
